--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,65 @@
 annotated-types==0.7.0
 anyio==4.9.0
+blender-mcp==1.1.1
+blinker==1.9.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+decorator==4.4.2
+dnspython==2.7.0
+emoji==2.14.1
 exceptiongroup==1.2.2
+Flask==3.1.0
 gevent==24.11.1
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
+httpx-sse==0.4.0
 httpx-ws==0.7.2
 idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
 lmstudio==1.2.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mcp==1.4.1
+mdurl==0.1.2
+moviepy==1.0.3
 msgspec==0.19.0
+numpy==2.2.4
 pillow==11.2.1
+proglog==0.1.11
 pycparser==2.22
 pydantic==2.11.3
+pydantic-settings==2.8.1
 pydantic_core==2.33.1
+Pygments==2.19.1
+pymongo==4.12.0
+python-dotenv==1.0.1
 PyYAML==6.0.2
+qrcode==8.0
 requests==2.32.3
+rich==13.9.4
 setuptools==78.1.0
+shellingham==1.5.4
 sniffio==1.3.1
+sse-starlette==2.2.1
+starlette==0.46.1
+tqdm==4.67.1
+typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
+uv==0.6.8
+uvicorn==0.34.0
 websocket==0.2.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
 wsproto==1.2.0
 zope.event==5.0
 zope.interface==7.2
