--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ shellingham==1.5.4
 sniffio==1.3.1
 sse-starlette==2.2.1
 starlette==0.46.1
+textual==0.52.1
 tqdm==4.67.1
 typer==0.15.2
 typing-inspection==0.4.0
