--- a/configs/anime.yaml
+++ b/configs/anime.yaml
@@ -1,123 +1,116 @@
 tags:
   subject:
-    - anime_boy
-    - anime_girl
-    - magical_girl
-    - mecha_unit
-    - school_student
-    - yokai_spirit
-    - shonen_hero
-    - bishounen
-    - catgirl
+    - protagonist_teen
+    - magical_sidekick
     - masked_warrior
-    - demon_lord
-    - idol_performer
-    - urban_teen
-    - fantasy_companion
-    - slice_of_life_character
+    - school_uniform_character
+    - urban_dreamer
+    - folklore_spirit
+    - mecha_frame
+    - idol_girl
+    - elegant_rival
+    - tsundere_type
+    - animal_companion
+    - heroic_mentor
+    - fantasy_traveler
+    - sci_fi_outcast
 
   action:
-    - sword_duel
-    - transformation_sequence
-    - quiet_moment
-    - battle_pose
-    - emotional_confession
-    - rooftop_stare
+    - silent_longing
+    - rooftop_confrontation
+    - transformation_glow
+    - moonlit_confession
     - cherry_blossom_walk
-    - jump_attack
-    - midair_flight
-    - eating_ramen
-    - casting_spell
-    - running_late
-    - tea_ceremony
-    - mecha_launch
-    - holding_umbrella
+    - thunder_flash_duel
+    - mecha_activation
+    - lunch_time_escape
+    - final_attack_pose
+    - rainy_day_wait
+    - hovering_above_city
+    - festival_lantern_dance
+    - nostalgic_gesture
 
   setting:
-    - japanese_high_school
-    - neon_tokyo_street
-    - sakura_garden
-    - spirit_realm
-    - cozy_cafe
-    - space_station
-    - dark_forest
-    - rainy_alleyway
-    - mecha_hangar
-    - fantasy_village
-    - traditional_shrine
-    - futuristic_district
-    - underwater_palace
-    - dojo_training_room
+    - sakura_hill_at_dusk
+    - glowing_tokyo_alley
+    - traditional_japanese_room
+    - anime_classroom_light
+    - rooftop_under_stars
+    - pixelated_arcade
+    - misty_forest_path
+    - shrine_on_cliff
+    - otherworld_border
+    - idol_stage
+    - dark_mecha_dock
+    - beach_during_typhoon
 
   mood:
-    - cute
-    - melancholic
-    - intense
-    - heroic
-    - romantic
-    - mysterious
-    - nostalgic
-    - cheerful
+    - bittersweet
     - dreamy
-    - epic
-    - serene
-    - dramatic
+    - fiery
+    - mysterious
+    - heroic
+    - tragic
+    - nostalgic
+    - lighthearted
+    - intense
+    - whimsical
+    - distant
+    - romantic
+    - surreal
 
   style:
-    - anime
-    - manga_panel
-    - colored_ink
-    - cel_shading
-    - retro_anime
-    - shoujo_aesthetic
-    - shonen_vibe
-    - gritty_manga
-    - visual_novel_art
-    - 90s_ova_style
-    - high_detail_digital
-    - anime_painting
-    - handdrawn_sketch
+    - vibrant_anime_frame
+    - cel_shaded_drama
+    - watercolor_manga
+    - retro_90s_style
+    - soft_shoujo_lighting
+    - gritty_shonen_panel
+    - hyper_detail_digital
+    - sketch_overlay
+    - cinematic_scene_frame
+    - pastel_color_themes
+    - bold_ink_lines
+    - dynamic_visual_novel
 
   lighting:
-    - bright_daylight
-    - rim_light
-    - dramatic_contrast
-    - glowing_magic
-    - sakura_glow
-    - cool_moonlight
-    - sunset_shadows
-    - screen_glare
-    - neon_reflection
-    - interior_softlight
+    - sunset_gradient
+    - neon_rim_light
+    - moonlit_blush
+    - magical_aura_glow
+    - rainy_reflection
+    - nostalgic_fade
+    - festival_light_sparkle
+    - glowing_morning_light
+    - interior_soft_glow
 
   camera_angle:
-    - dynamic_low_angle
-    - over_the_shoulder
-    - close_up_tears
-    - extreme_perspective
-    - character_turnaround
-    - dramatic_top_down
-    - face_frontal_smile
-    - background_focus_blur
+    - tilted_drama_frame
+    - emotional_closeup
+    - low_angle_jump
+    - top_down_silhouette
+    - over_shoulder_flashback
+    - midair_dynamic
+    - profile_in_shadow
+    - dramatic_back_view
 
 lm_studio:
   model: "gemma-3-4b-it"
   prompt_template: |
-    Generate a vivid anime/manga-style image prompt using the tags: {tags}.
+    Generate a powerful anime-style image prompt using the abstract tags: {tags}.
 
     Guidelines:
-    - Use expressive **comma-separated phrases**
-    - Focus on the **subject, emotion, scene setting, and stylization**
-    - Do NOT mention “photo” or camera terms
-    - Avoid generic prompts — make it feel like a scene from a show or cover art
+    - Use **emotive, scene-like phrases**, comma-separated
+    - Think like an anime storyboard artist — highlight action, emotion, atmosphere
+    - No full sentences or camera lingo
+    - Prompt should feel like a moment from an anime opening, battle climax, or emotional turning point
     - Keep under **30 words**
-    - Must feel like it belongs in an anime opening, keyframe, or panel splash
 
     Prompt:
 
 comfy_ui:
   server_address: "127.0.0.1:8188"
-  default_workflow: "sd_xl"  # optional override if you have anime-focused ComfyUI graph
+  default_workflow: "sd_xl"
   steps: 64
   width: 1024
   height: 1024
