--- a/configs/stock.yaml
+++ b/configs/stock.yaml
@@ -1,102 +1,105 @@
 tags:
   subject:
-    - human_presence
-    - group_interaction
-    - solitary_figure
-    - domestic_animal
-    - wild_animal
-    - everyday_object
-    - food_or_drink
-    - living_thing
-    - machine_or_device
-    - symbolic_form
-    - surreal_entity
-    - abstract_shape
+    - individual_person
+    - small_group
+    - family_dynamic
+    - domestic_pet
+    - urban_wildlife
+    - household_item
+    - workspace_object
+    - plant_life
+    - digital_device
+    - tool_or_accessory
+    - neutral_symbol
+    - decorative_shape
+    - cozy_element
 
   action:
-    - everyday_life
-    - emotional_state
-    - physical_motion
-    - personal_care
-    - human_connection
-    - artistic_expression
-    - intellectual_activity
-    - stillness_or_waiting
-    - ambiguous_gesture
+    - daily_activity
+    - emotional_expression
+    - focused_task
+    - social_interaction
+    - leisure_moment
+    - creative_process
+    - care_or_gesture
+    - thoughtful_pause
+    - passive_motion
 
   setting:
-    - urban_environment
-    - domestic_space
-    - commercial_space
-    - public_area
-    - transportation_hub
-    - natural_outdoor
-    - abstract_space
-    - imaginative_realm
-    - nondescript_backdrop
+    - modern_home_interior
+    - office_space
+    - living_room
+    - public_park
+    - transit_area
+    - cafe_or_bistro
+    - kitchen_counter
+    - city_street_corner
+    - bright_studio_backdrop
+    - neutral_background
 
   mood:
-    - neutral
-    - positive
-    - negative
-    - introspective
-    - dramatic
-    - surreal
-    - ambiguous
+    - calm
+    - cheerful
+    - thoughtful
+    - motivated
+    - peaceful
+    - collaborative
+    - practical
+    - content
+    - gentle
+    - sincere
 
   style:
-    - naturalistic
-    - stylized
-    - flat_design
-    - cinematic
-    - retro_aesthetic
-    - conceptual_art
-    - visual_minimalism
-    - expressive_illustration
+    - clean_realism
+    - editorial_minimalism
+    - lifestyle_soft_focus
+    - pastel_flat
+    - muted_conceptual
+    - modern_visual_language
+    - business_casual
+    - health_wellness_styling
+    - abstract_corporate
 
   lighting:
-    - ambient
-    - soft
-    - moody
-    - warm
-    - cold
-    - directional
-    - diffuse
-    - mixed_sources
+    - natural_daylight
+    - softbox_even
+    - indirect_sunlight
+    - warm_indoor
+    - subtle_shadowplay
+    - neutral_fill_light
+    - backlit_diffusion
+    - window_light_bounce
 
   camera_angle:
-    - natural_perspective
-    - elevated_view
-    - downward_view
+    - level_eye_view
+    - three_quarter_frame
+    - above_tabletop
     - close_crop
-    - over_the_shoulder
-    - incidental_view
-    - subjective_view
-    
+    - over_shoulder
+    - perspective_peek
+    - lifestyle_wide
+    - subject_centered
+
 lm_studio:
   model: "gemma-3-4b-it"
   prompt_template: |
-    You are a creative visual assistant generating prompts for a stock image AI system.
+    You are creating a prompt for a **stock image generator**.
 
-    Combine the following abstract tags into a rich **visual concept**. Use descriptive language, referencing:
-    - The **subject** and its form or materials (especially for "everyday_object")
-    - The **setting** or surrounding context
-    - The **mood** or atmosphere
-    - The **style** and **lighting** aesthetics
-
-    For "everyday_object", **avoid clichés** like phones, suitcases, or laptops. Instead, include **less common but familiar items** (e.g. mugs, umbrellas, chairs, books, glasses, shoes, keys, pillows, bags, scissors, mirrors, tools, clocks, etc.)
+    Use the following tags: {tags}
 
     Guidelines:
-    - Output a **single line of comma-separated descriptive phrases**.
-    - Do NOT use full sentences or camera terminology.
-    - Avoid saying “photo”, “image”, or “render”.
-    - Keep it under 20 words.
+    - Output should be a single line of **comma-separated phrases**
+    - Focus on **human presence, lifestyle elements, clean visuals, and contextual clarity**
+    - Especially for everyday objects, be **specific** and avoid clichés (no phones, laptops, suitcases)
+    - Use clear visual language: form, material, mood, light, setting
+    - Do **not** use full sentences or mention cameras, photos, or image types
+    - Keep it under **20 words**
 
     Prompt:
-    
+
 comfy_ui:
-  server_address: "127.0.0.1:8188" # Replace with your ComfyUI server address
-  default_workflow: "flux_dev" # Default workflow to use for this config
+  server_address: "127.0.0.1:8188"
+  default_workflow: "flux_dev"
   steps: 35
   width: 1536
   height: 1536
