--- a/configs/anime.yaml
+++ b/configs/anime.yaml
@@ -110,7 +110,7 @@ lm_studio:
 
 comfy_ui:
   server_address: "127.0.0.1:8188"
-  default_workflow: "sd_xl"
-  steps: 64
-  width: 1024
-  height: 1024
+  default_workflow: "hidream"
+  steps: 30
+  width: 1360
+  height: 768
