--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=D:\osIcons\w11_sameerasw\pictures.ico,0
+IconResource=D:\osIcons\sanyabeast11\pictures.ico,0
 [ViewState]
 Mode=
 Vid=
