--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dnspython==2.7.0
 emoji==2.14.1
 exceptiongroup==1.2.2
 Flask==3.1.0
+flask-cors==5.0.1
 fuzzywuzzy==0.18.0
 gevent==24.11.1
 greenlet==3.1.1
